--- a/test-suites/ProjectController/autocodeconfig/abstract/project_getCodeConfigSave_abstract.yaml
+++ b/test-suites/ProjectController/autocodeconfig/abstract/project_getCodeConfigSave_abstract.yaml
@@ -14,13 +14,10 @@ auth: Default
 headers:
 - 'Content-Type: application/json'
 
-
 assertions:
   - "@StatusCode == 200"
   - "@Response.errors == false"
-  - "@Response.data.name == @Request.name"
-  - "@Response.data.url == @Request.url"
-  - "@Response.data.account.id == @Request.account.id"
+  - "@Response.data != EMPTY"
 
 severity: Major
 
