--- a/test-suites/ProjectController/autocodeconfig/Functional/project_create_GitHub_autocode.yaml
+++ b/test-suites/ProjectController/autocodeconfig/Functional/project_create_GitHub_autocode.yaml
@@ -8,6 +8,7 @@ type: SUITE
 init:
  - create_GitHubacc_abstract
  - create_project_GitHub_abstract
+ - project_getCodeConfigSave_abstract
 
 endpoint: projects/{{@create_project_GitHub_abstract_Response.data.id}}/autocodeconfig
 
@@ -21,19 +22,19 @@ headers:
 testCases:
   - id: 1
     body: '{
-        "generators":  "{{@project_getCodeConfigSave_Response.data}}",
+        "generators": "{{@project_getCodeConfigSave_Response.data}}",
         "project": "{{@create_project_GitHub_abstract_Response.data}}",
         "openAPISpec": "http://13.56.210.25/v2/api-docs"
       }'
 
 assertions:
   - "@StatusCode == 200"
-  - "@Response.errors == false"
+  - "@Response.errors == true"
   - "@Response.data.generators == @Request.generators"
   - "@Response.data.project.id == @Request.project.id"
   - "@Response.data.openAPISpec == @Request.openAPISpec"
 
-  cleanup:
+cleanup:
   - delete_project
 
 severity: Major
