--- a/AutoCodeConfig.yaml
+++ b/AutoCodeConfig.yaml
@@ -26,6 +26,7 @@ generators:
   - "@StatusCode == 401 OR @StatusCode == 403"
   tags:
   - "OWASP - OTG-AUTHN-002"
+  - "FX Top 10 - API Vulnerability"
   severity: null
   database: null
   inactive: true
@@ -51,6 +52,7 @@ generators:
   - "[PIC DSS 3.0] 6.5.8"
   - "[PIC DSS 3.0] 6.5.10"
   - "OTG-AUTHN-004"
+  - "FX Top 10 - API Vulnerability"
   severity: null
   database: null
   inactive: true
@@ -76,6 +78,7 @@ generators:
   - "[PIC DSS 3.0] 6.5.8"
   - "[PIC DSS 3.0] 6.5.10"
   - "OTG-AUTHN-004"
+  - "FX Top 10 - API Vulnerability"
   severity: null
   database: null
   inactive: true
@@ -97,6 +100,7 @@ generators:
   - "OWASP A1"
   - "[PCI DSS 3.0] 6.5.1"
   - "OTG-AUTHN-004"
+  - "FX Top 10 - API Vulnerability"
   severity: null
   database: null
   inactive: true
@@ -117,6 +121,7 @@ generators:
   - "Allowed:@StatusCode != 401 AND @StatusCode != 403"
   tags:
   - "OWASP - OTG-IDENT-001 "
+  - "FX Top 10 - API Vulnerability"
   severity: null
   database: null
   inactive: true
@@ -137,6 +142,7 @@ generators:
   - "@StatusCode != 404"
   tags:
   - "[PCI DSS 3.0] 6.5.2"
+  - "FX Top 10 - API Vulnerability"
   severity: null
   database: null
   inactive: true
@@ -162,6 +168,7 @@ generators:
   - "[PIC DSS 3.0] 6.5.7"
   - "OWASP - OTG-INPVAL-001"
   - "OWASP - OTG-INPVAL-002"
+  - "FX Top 10 - API Vulnerability"
   severity: null
   database: null
   inactive: true
@@ -175,6 +182,7 @@ generators:
   - "OWASP A1"
   - "[PCI DSS 3.0] 6.5.1"
   - "OWASP - OTG-INPVAL-005"
+  - "FX Top 10 - API Vulnerability"
   severity: null
   database:
     name: "MySQL"
